# my_telegram_bot_rustlang

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  getfiles.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs
