[package]
name = "my_telegram_bot"
version = "1.7.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenvy = "0.15"
base64 = "0.22"
rand = "0.8"
percent-encoding = "2.3"
qrcode = "0.13"
image = "0.24"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"